################################################################################
# Copyright (c) 2013 David D. Marshall <ddmarsha@calpoly.edu>
#
# All rights reserved. This program and the accompanying materials
# are made available under the terms of the Eclipse Public License v1.0
# which accompanies this distribution, and is available at
# http://www.eclipse.org/legal/epl-v10.html
#
# Contributors:
#    David D. Marshall - initial code and implementation
################################################################################

project(GEOM)

add_subdirectory(bounding_box)
add_subdirectory(fit_container)
add_subdirectory(bezier_curve)
add_subdirectory(piecewise_curve)
add_subdirectory(bezier_surface)
add_subdirectory(piecewise_surface)
add_subdirectory(minimum_distance)
add_subdirectory(pseudo_curve)
